# cBase

./: CMakeLists.txt  README.md
day1/: 1.c  example.c  example2.c  memery_shake.c
day2/: ROOT.c  ascll.c  binaryconvert.c  constvariable.c  convert.c  datetype.c  variableinit.c
day3/: cycle-1.c  cycle-2.c  cycle-3.c  cycle-4.c  cycle-5.c  cycle-6.c  cycle-7.c  cycle.c  operator-1.c  operator.c  printf.c  processControl-1.c  processControl-2.c  processControl-3.c  processControl-4.c  processControl-5.c  processControl-6.c  processControl-7.c  processControl.c  scanf-1.c  scanf-2.c  scanf-3.c  scanf-error.c  scanf.c  switch.c
day4/: break.c  cycle.c  cycle_break.c  do-while.c  opreator-1.c  opreator.c  processControl_continue.c  switch.c  system.c  while-1.c  while.c
day5/: array-extend.c  array-maxmin.c  array-sort.c  array.c  two-dimensional.c
day6/: bool.c  func-break.c  func-return.c  func-type.c  func.c  func_design.c  func_design_1.c  func_design_2.c  func_prime.c  func_recursive.c  func_recursive_1.c  func_scope.c  func_statement.c  func_statment_error.c  func_system.c
day7/: pointer.c  pointer_array.c  pointer_array_1.c  pointer_convert.c  ponter_1.c  ponter_2.c
day8/: test.c
