cmake_minimum_required(VERSION 3.15)
project(LEARN C)

set(CMAKE_C_STANDARD 99)

add_executable(pointer day7/pointer.c)
add_executable(ponter_1 day7/ponter_1.c)
add_executable(ponter_2 day7/ponter_2.c)
add_executable(pointer_convert day7/pointer_convert.c)
add_executable(pointer_array day7/pointer_array.c)
add_executable(pointer_array_1 day7/pointer_array_1.c)
add_executable(test day8/test.c)
add_executable(1 day1/1.c)
add_executable(array day5/array.c)